<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="cryptomoonx">CryptoMoonX</string>
    <string name="next">Next</string>


    <string name="takehold">Take hold of your finances</string>
    <string name="smart">Smart trading tools</string>
    <string name="invest">Invest in the future</string>

    <string name="des_takehold">Learn how to manage money wisely, build financial stability, and take control of your future with simple, practical steps.</string>
    <string name="des_smart_trading">Powerful trading tools designed to boost your strategy and maximize results.</string>
    <string name="des_invest">Invest today, enjoy the rewards of tomorrow.</string>
    <string name="copy_clip_board">copy\n\n</string>
    <string name="start">Start</string>
    <string name="market">Market</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="calculator">Calculator</string>
    <string name="chart_analysis">Trading Chart AI</string>
    <string name="des_trading">Get technical analysis for candlestick \ntrading charts in seconds</string>

    <string name="market2">Markets</string>


    <string name="coin">TOP COINS</string>
    <string name="trending">🔥TRENDING</string>
    <string name="gainers">TOP GAINERS</string>
    <string name="losers">TOP LOSERS</string>
    <string name="exchange">EXCHANGE</string>
    <string name="tradFi">TRADFI</string>
    <string name="watchLists">WATCHLISTS</string>
    <string name="symbol_oi">Symbol/OI</string>
    <string name="price">Price</string>
    <string name="_24h_change">24H Change</string>



    <string name="overview">OVERVIEW</string>
    <string name="markets">MARKET</string>
    <string name="alert">ALERT</string>
    <string name="newDetail">NEWS</string>
    <string name="cal">Profit Cal</string>
    <string name="_1h">1H</string>
    <string name="_1d">1D</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_1y">1Y</string>
    <string name="stats">Stats</string>
    <string name="market_cap">Market Cap</string>
    <string name="fully_diluted_valuation">Fully Diluted Valuation</string>
    <string name="total_volume">Volume 24H</string>
    <string name="percent_change_1h">Percent Change 1H</string>
    <string name="percent_change_24h">Percent Change 24H</string>
    <string name="percent_change_7d">Percent Change 7D</string>
    <string name="percent_change_30D">Percent Change 30D</string>
    <string name="percent_change_60D">Percent Change 60D</string>
    <string name="percent_change_90D">Percent Change 90D</string>
    <string name="low_24h">Low 24h</string>
    <string name="no_data">No Data</string>
    <string name="btc_dominate">BTC Dominance</string>

    <string name="categories_2">Categories</string>
    <string name="links">Links</string>
    <string name="_4h">4H</string>
    <string name="_15m">15m</string>
    <string name="_5m">5m</string>
    <string name="exchange_pair">Exchange Pair</string>
    <string name="volume">Volume</string>
    <string name="vol24H">Volume 24H</string>



    <string name="handpick">👌Handpicked</string>
    <string name="trending_news">🔥Trending</string>
    <string name="latest_news">🕑Latest</string>
    <string name="bullish_news">🦬Bullish</string>
    <string name="bearish_news">🐻Bearish</string>
    <string name="altcoin_index">Altcoin Index</string>
    <string name="let_s_get_started_with_your_first_portfolio">Let\'s get started with \n your first portfolio!</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="search_coins">Search Coins...</string>
    <string name="_0">$0</string>
    <string name="number">$</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="title_bot">Hello! I\'m your Crypto Market Analyst. I can help you with technical analysis, identify support/resistance zones, and provide insights on various cryptocurrencies. Which coin would you like analyzed today?</string>


    <string name="alert_by_price">ALERT BY PRICE</string>
    <string name="alert_by_percent">ALERT BY PERCENT</string>
    <string name="enter_target_price">Enter Target Price</string>
    <string name="save">SAVE</string>
    <string name="frequency">Frequency</string>
    <string name="one_time">One Time</string>
    <string name="coin2">Coin</string>
    <string name="buy_price">Buy price</string>
    <string name="search">Search</string>
    <string name="text_dollar">$</string>
    <string name="_1">0</string>
    <string name="investment">Investment</string>
    <string name="sell_price">Sell price</string>
    <string name="investment_fee">Investment Fee</string>
    <string name="exit_fee">Exit Fee</string>
    <string name="investment_result">Investment Result</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="total_investment_amount">Total Investment Amount</string>
    <string name="total_exit_amount">Total Exit Amount</string>
    <string name="calculator_profit">Calculator Profit</string>
    <string name="theme">THEME</string>
    <string name="light">💡 Light</string>
    <string name="dark">🌙 Dark</string>
    <string name="system">⚙️ System</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us_on_play_store">Rate on US</string>
    <string name="default_home_screen">Choose Default Screen</string>
    <string name="screener_display">Screener Display</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ai_token">Trading Chart AI</string>
    <string name="please_enter_the_name_of_the_token_you_want_to_analyze_for_example_btc_eth_sol">Please enter the name of the token you want to analyze, for example: BTC, ETH, SOL, ...</string>
    <string name="token_analysis_with_cryptobot">Token analysis with QuantBot</string>
    <string name="assistant_quantai">Assistant QuantAI</string>
    <string name="history_question">History Question</string>
    <string name="profit">Profit</string>

    <string name="tell_us_the_problem_you_encountered">Tell us the problem you encountered</string>
    <string name="type">Type</string>
    <string name="submit">Submit</string>


    <string name="lag">The app feels slow, lags, or crashes during use</string>
    <string name="data">Prices, charts, or market data are not updating accurately or in real time.</string>
    <string name="UI">The interface is confusing, hard to navigate, or difficult to use on mobile.</string>
    <string name="terms_of_use">Terms &amp; Conditions</string>
    <string name="this_action_may_contain_ads">This action can contain ads</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="result_analysis_chart">Result Analysis Chart</string>
    <string name="entry">📍Entry</string>
    <string name="market_structure">🏛️ Market Structure</string>
    <string name="signal">🚀 Signal</string>
    <string name="stoploss">🛑 Stoploss</string>
    <string name="take_profit_1">✅ Take Profit 1</string>
    <string name="take_profit_2">✅ Take Profit 2</string>
    <string name="confidence">🔥Confidence</string>
    <string name="trend">📈 Trend</string>
    <string name="key_levels">🎯 Key Levels</string>
    <string name="candlestick_pattern">🕯️Candlestick Pattern</string>
    <string name="risk_reward">⚖️ RISK/REWARD:</string>
</resources>