<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
   <RelativeLayout
       android:id="@+id/viewTop"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/textHeaderMarket"
           android:layout_width="wrap_content"
           android:textColor="@color/black"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:layout_marginTop="@dimen/_8sdp"
           android:layout_marginStart="@dimen/_15sdp"
           android:fontFamily="@font/inter_bold"
           android:text="@string/symbol_oi"
           android:textSize="@dimen/_12ssp" />

       <LinearLayout
           android:layout_margin="@dimen/_8sdp"
           android:layout_alignParentEnd="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/inter_bold"
               android:text="@string/price"
               android:textColor="@color/black"
               android:textSize="@dimen/_12ssp" />

           <TextView
               android:layout_marginStart="@dimen/_15sdp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/inter_bold"
               android:textColor="@color/black"
               android:text="@string/_24h_change"
               android:textSize="@dimen/_12ssp" />
       </LinearLayout>

   </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListToken"
        tools:listitem="@layout/custom_list_token_realtime"
        app:layout_constraintTop_toBottomOf="@+id/viewTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</androidx.constraintlayout.widget.ConstraintLayout>