<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/portfolio"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMarket">

        <ImageView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/portfilio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:textSize="@dimen/_18ssp"
            android:text="@string/let_s_get_started_with_your_first_portfolio"
            android:textColor="@color/black" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddTransaction"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_margin="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <RelativeLayout
            android:background="@color/green"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/add_transaction"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>