<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTopExchange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <RelativeLayout
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textExchange"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_height="match_parent">
            <TextView
                android:layout_alignParentStart="true"
                android:text="@string/exchange_pair"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/inter_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_alignParentEnd="true"
                android:text="@string/volume"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/inter_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


        <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/textExchange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/inter_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExchange"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/viewTopExchange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>