<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgToken"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_started" />

            <TextView
                android:id="@+id/tokenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/segmentBuySell"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_14sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/viewTop">

        <LinearLayout
            android:layout_width="@dimen/_300sdp"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/viewBuy"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/gray"
                    android:text="@string/buy"
                    android:textSize="@dimen/_8ssp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBuy"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_4sdp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:fontFamily="@font/inter_bold"
                            android:textColor="@color/white"
                            android:text="@string/buy"
                            android:textSize="@dimen/_8ssp"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/viewSell"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/gray"
                    android:text="@string/sell"
                    android:textSize="@dimen/_8ssp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:visibility="gone"
                    android:id="@+id/cardSell"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_4sdp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:fontFamily="@font/inter_bold"
                            android:textColor="@color/white"
                            android:text="@string/sell"
                            android:textSize="@dimen/_8ssp"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>






        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/viewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/symbolUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inter_bold"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/edtValueToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/inter_bold"
                android:hint="0"
                android:inputType="numberDecimal"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_30ssp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/textSymbolToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inter_bold"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textPrice"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewNumber"
            android:fontFamily="@font/inter_bold"
            android:text="890"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/viewChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/conversion" />

        <TextView
            android:id="@+id/textSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_bold"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>